--- a/control
+++ b/control
@@ -1,9 +1,9 @@
 Package: com.samstone.translucentcydia
 Name: TranslucentCydia
 Depends: mobilesubstrate
-Version: 0.0.1
+Version: 2.0.1
 Architecture: iphoneos-arm
-Description: An awesome MobileSubstrate tweak!
+Description: Make Cydia translucent!
 Maintainer: Sam Stone
 Author: Sam Stone
 Section: Tweaks
